--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
     color: #33417c;
     font-size: 16px;
     font-weight: 500;
+    font-family: 'Montserrat', sans-serif;
 }
 .banner{
     background-image: url(../images/banner.png);
@@ -18,6 +19,7 @@
     display: flex;
     align-items: center;
     position: relative;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .banner h1{
@@ -27,6 +29,7 @@ color: #fff;
 font-size: 65px;
 
 text-transform: uppercase;
+font-family: 'Montserrat', sans-serif;
 }
 
 .icon{
@@ -59,13 +62,15 @@ top:85%
 }
 
 .who_we_are{
-
+    font-family: 'Montserrat', sans-serif;
 padding: 80px 0;
 }
 
 .who_we_are p{
 
 color: #bab5b2;
+
+font-family: 'Open Sans', sans-serif;
 }
 
 
@@ -76,18 +81,24 @@ display: inline-block;
 width: 0px;
 
 height: 5px;
-
+font-family: 'Open Sans', sans-serif;
 background: #f19a62;
 transition: .2s all ease-in-out;
 }
 
 .heading h1{
 
+/* font-family: 'Open Sans', sans-serif; */
+
+font-family: 'Montserrat', sans-serif;
+
 text-transform: uppercase;
 
 color: #33417c;
 
 font-size: 40px;
+
+font-weight: bold;
 }
 
 .text_right{
@@ -170,21 +181,26 @@ height: 100%;
 }
 
 .title{
-    text-transform: uppercase;
     position: absolute;
-    top: 50%;
-    color: white;
-    left: 40%;
-    transform: translate(-18px, 10px);
+    top: 45%;
+    left: 50%;
+    color: #fff;
+    text-transform: uppercase;
+    transform: translate(-55%, -50%);
     opacity: 0;
-    transition: 0.5s all ease-in-out;
+    transition: .7s all ease-in-out;
+    font-weight: bold;
+    font-family: 'Montserrat', sans-serif;
+}
+
 
 
 }
 .title h1{
 
+font-family: 'Montserrat', sans-serif;
 
-
+font-weight: bold;
 }
 .image:hover .title{
     opacity: 1;
@@ -207,7 +223,7 @@ height: 100%;
 
 .image:hover .arrow_icon{
     opacity: 1;
-    left: 50%;
+    left: 54%;
 
 
 }
@@ -282,7 +298,10 @@ background-color: #36226f;
     width: 53px;
 }
 .our-attorneys h2{
+    font-family: 'Montserrat', sans-serif;
     color: #fff;
+    font-weight: bold;
+    font-size: 47px;
 }
 .our-attorneys p{
     font-size: 16px;
@@ -352,8 +371,10 @@ font-weight: 500;
 }
 
 .langgu1st h1{
-
+color: #36226f;
 text-transform: uppercase;
+font-family: 'Montserrat', sans-serif;
+font-weight: bold;
 
 }
 .languages:hover .langgu1st span{
@@ -370,11 +391,17 @@ width: 53px;
 .inner_langu h1{
 
 color: #36226f;
+
+font-family: 'Montserrat', sans-serif;
+
+font-weight: bold;
 }
 
 .inner_langu p{
 
 color: #bab5b3;
+
+font-family: 'Open Sans', sans-serif;
 }
 
 .inner_langu h2{
@@ -461,7 +488,8 @@ color: #e76128;
 
 .footer{
     background-color: #16102b;
-    padding: 20px 0;
+    padding: 22px 0;
+    margin-top: 50px;
 }
 
 .footer-content p{
