--- a/css/style.css
+++ b/css/style.css
@@ -464,7 +464,7 @@ padding-top: 30px;
 text-align: center;
 }
 
-.contract_usd form input{color: white;width: 100%;background: transparent;border: none;border-bottom: 1px solid #564a98;margin-bottom: 15px;caret-color:white;font-family: 'Montserrat', sans-serif;font-weight: normal;}
+.contract_usd form input{color: white;width: 100%;background: transparent;border: none;border-bottom: 1px solid #564a98;margin-bottom: 45px;caret-color:white;font-family: 'Montserrat', sans-serif;font-weight: normal;}
 
 .contract_usd form input:focus-visible{
 outline: none;
@@ -524,6 +524,8 @@ font-weight: bold;
 transition: 0.5s all ease-in-out;
 
 font-family: 'Open Sans', sans-serif;
+
+margin-top: 30px;
 }
 
 .contract_usd form input[type="submit"]:hover{
