--- a/css/style.css
+++ b/css/style.css
@@ -37,32 +37,30 @@ font-family: 'Montserrat', sans-serif;
 
 .icon{
 
-position: absolute;
+    position: absolute;
 
-font-size: 27px;
-
-color: white;
-
-left: 50%;
-
-top: 89%;
-transform: translate(-50%,0);
-animation: updown 3s linear infinite;
--o-animation-direction: alternate;
-}
-@keyframes updown{
-0%{
-top:80%
-
-}
-100%{
-
-top:85%
-
-
-}
-
-}
+    left: 50%;
+    
+    color: #fff;
+    
+    top: 75%;
+    
+    transform: translate(-50%);
+    
+    font-size: 40px;
+    
+    animation: down-arrow-icon 0.8s linear infinite;
+    
+    animation-direction: alternate;
+    }
+    @keyframes down-arrow-icon{
+        0%{
+            top: 75%;
+        }
+        100%{
+            top: 79%;
+        }
+    }
 
 .who_we_are{
     font-family: 'Montserrat', sans-serif;
